# jaws

./: .gitignore  Cargo.toml  README.md  execute.sh  index.html  run.js  test262_runner.rb
crates/wasmedge-runner/: Cargo.toml
crates/wasmedge-runner/src/: main.rs
experiments/: check-node-features.js  exception_handling_test.wasm  exception_handling_test.wat  ref-cast.wasm  ref-cast.wat  stringref_test.wat  wasm_gc_test.wasm  wasm_gc_test.wat
src/: main.rs  wat_ast.rs  wat_template.rs
src/wat/: template.wat
test/: README.md  fib.js  fib.wat  t01.js  t01.wat
wasm/: generated.wasm
wat/: generated.wat
